--- a/main.html
+++ b/main.html
@@ -1,27 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify</title>
+    <title>Spotify - Web Player: Music for everyone</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
 </head>
+
 <body>
     <div class="container flex bg-black">
-        <div class="left border bg-black">
-            <div class="home bg-grey">
+        <div class="left border bg-grey">
+            <div class="home bg-grey rounded m-2 p-1">
                 <div class="log"><img src="img/logo.svg" height="60px" alt=""></div>
                 <ul>
                     <li><img class="invert" src="img/home.svg" alt=""></li>
                     <li><img class="invert" src="img/search.svg" alt=""></li>
                 </ul>
             </div>
-            <div class="library bg-grey"></div>
+            <div class="library bg-grey rounded m-2 p-1">
+                <div class="heading">
+                    <img class="invert" src="img/playlist.svg" alt="">
+                    <h2>
+                        Your Library
+                    </h2>
+                </div>
+            </div>
         </div>
         <div class="right border">
-            asdfjflaksjf;adsjflksddj
+            <div class="header">
+                <div class="nav">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
+                        fill="none">
+                        <path d="M15 6C15 6 9.00001 10.4189 9 12C8.99999 13.5812 15 18 15 18" stroke="#ffffff"
+                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
+                        fill="none">
+                        <path d="M9.00005 6C9.00005 6 15 10.4189 15 12C15 13.5812 9 18 9 18" stroke="#ffffff"
+                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                </div>
+                <div class="buttons">
+                    <button>Signup</button>
+                    <button>Login</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
