--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container flex bg-black">
-        <div class="left border bg-grey">
+        <div class="left">
             <div class="home bg-grey rounded m-2 p-1">
                 <div class="log"><img src="img/logo.svg" height="60px" alt=""></div>
                 <ul>
@@ -26,10 +26,20 @@
                         Your Library
                     </h2>
                 </div>
+                <!-- song list and that  -->
+                <div class="footer">
+                    <div><a href="https://www.spotify.com/jp/legal/"><span>Legal</span></a></div>
+                    <div><a href="https://www.spotify.com/jp/privacy/"><span>Privacy Center</span></a></div>
+                    <div><a href="https://www.spotify.com/jp/legal/privacy-policy/"><span>Privacy Policy</span></a>
+                    </div>
+                    <div><a href="https://www.spotify.com/jp/legal/cookies-policy/"><span>Cookies</span></a></div>
+                    <div><a href="https://www.spotify.com/jp/legal/privacy-policy/#s3"><span>About Ads</span></a></div>
+                    <div><a href="https://www.spotify.com/jp/accessibility/"><span>Accessibility</span></a></div>
+                </div>
             </div>
         </div>
-        <div class="right border">
-            <div class="header">
+        <div class="right">
+            <div class="header bg-grey rounded m-2 p-1">
                 <div class="nav">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
                         fill="none">
@@ -45,6 +55,30 @@
                 <div class="buttons">
                     <button>Signup</button>
                     <button>Login</button>
+                </div>
+            </div>
+            <div class="spotify-playlist bg-grey rounded m-2 p-1">
+                <h1>Spotify Playlist</h1>
+                <div class="cardContainer">
+                    <div class="card">
+                        <div class="play">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16"
+                                fill="none">
+                                <path
+                                    d="M5 20V4L19 12L5 20Z"
+                                    stroke="#141B34" fill="#000" stroke-width="1.5" 
+                                    stroke-linecap="round" />
+                            </svg>
+                        </div>
+                        <img src="img/happyhit.jpeg" alt="">
+                        <h2>Happy Hits!</h2>
+                        <p>Hits to boost your mood and fill you with happiness!</p>
+                    </div>
+                    <div class="card">
+                        <img src="img/happyhit.jpeg" alt="">
+                        <h2>Happy Hits!</h2>
+                        <p>Hits to boost your mood and fill you with happiness!</p>
+                    </div>
                 </div>
             </div>
         </div>
