--- a/main.html
+++ b/main.html
@@ -53,8 +53,8 @@
                     </svg>
                 </div>
                 <div class="buttons">
-                    <button>Signup</button>
-                    <button>Login</button>
+                    <button class="signupbtn">Sign Up</button>
+                    <button class="loginbtn">Log In</button>
                 </div>
             </div>
             <div class="spotify-playlist bg-grey rounded m-2 p-1">
@@ -79,10 +79,52 @@
                         <h2>Happy Hits!</h2>
                         <p>Hits to boost your mood and fill you with happiness!</p>
                     </div>
+                    <div class="card">
+                        <div class="play">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16"
+                                fill="none">
+                                <path
+                                    d="M5 20V4L19 12L5 20Z"
+                                    stroke="#141B34" fill="#000" stroke-width="1.5" 
+                                    stroke-linecap="round" />
+                            </svg>
+                        </div>
+                        <img src="img/happyhit.jpeg" alt="">
+                        <h2>Happy Hits!</h2>
+                        <p>Hits to boost your mood and fill you with happiness!</p>
+                    </div>
+                    <div class="card">
+                        <img src="img/happyhit.jpeg" alt="">
+                        <h2>Happy Hits!</h2>
+                        <p>Hits to boost your mood and fill you with happiness!</p>
+                    </div>
+                    <div class="card">
+                        <div class="play">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16"
+                                fill="none">
+                                <path
+                                    d="M5 20V4L19 12L5 20Z"
+                                    stroke="#141B34" fill="#000" stroke-width="1.5" 
+                                    stroke-linecap="round" />
+                            </svg>
+                        </div>
+                        <img src="img/happyhit.jpeg" alt="">
+                        <h2>Happy Hits!</h2>
+                        <p>Hits to boost your mood and fill you with happiness!</p>
+                    </div>
+                    <div class="card">
+                        <img src="img/happyhit.jpeg" alt="">
+                        <h2>Happy Hits!</h2>
+                        <p>Hits to boost your mood and fill you with happiness!</p>
+                    </div>
+                </div>
+                <div class="playbar">
+                    playbar
                 </div>
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
