--- a/main.html
+++ b/main.html
@@ -119,7 +119,15 @@
                     </div>
                 </div>
                 <div class="playbar">
-                    playbar
+                    <div class="songinfo">
+
+                    </div>
+                    <div class="songbuttons">
+                        <img src="img/prevsong.svg" alt="">
+                        <img src="img/play.svg" alt="">
+                        <img src="img/nextsong.svg" alt="">
+                    </div>
+                    <div class="songtime"></div>
                 </div>
             </div>
         </div>
