--- a/main.html
+++ b/main.html
@@ -26,6 +26,20 @@
                         Your Library
                     </h2>
                 </div>
+
+                <div class="songList">
+
+                    <ul>
+                        <li>
+                            <img class="invert" src="img/music.svg" alt="">
+                            <div class="info">
+                                <div>Song Name</div>
+                                <div>Song Artis</div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
                 <!-- song list and that  -->
                 <div class="footer">
                     <div><a href="https://www.spotify.com/jp/legal/"><span>Legal</span></a></div>
@@ -57,16 +71,14 @@
                     <button class="loginbtn">Log In</button>
                 </div>
             </div>
-            <div class="spotify-playlist bg-grey rounded m-2 p-1">
+            <div class="spotify-playlist">
                 <h1>Spotify Playlist</h1>
                 <div class="cardContainer">
                     <div class="card">
                         <div class="play">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16"
                                 fill="none">
-                                <path
-                                    d="M5 20V4L19 12L5 20Z"
-                                    stroke="#141B34" fill="#000" stroke-width="1.5" 
+                                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" fill="#000" stroke-width="1.5"
                                     stroke-linecap="round" />
                             </svg>
                         </div>
@@ -83,9 +95,7 @@
                         <div class="play">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16"
                                 fill="none">
-                                <path
-                                    d="M5 20V4L19 12L5 20Z"
-                                    stroke="#141B34" fill="#000" stroke-width="1.5" 
+                                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" fill="#000" stroke-width="1.5"
                                     stroke-linecap="round" />
                             </svg>
                         </div>
@@ -102,9 +112,7 @@
                         <div class="play">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16"
                                 fill="none">
-                                <path
-                                    d="M5 20V4L19 12L5 20Z"
-                                    stroke="#141B34" fill="#000" stroke-width="1.5" 
+                                <path d="M5 20V4L19 12L5 20Z" stroke="#141B34" fill="#000" stroke-width="1.5"
                                     stroke-linecap="round" />
                             </svg>
                         </div>
@@ -123,9 +131,9 @@
 
                     </div>
                     <div class="songbuttons">
-                        <img src="img/prevsong.svg" alt="">
-                        <img src="img/play.svg" alt="">
-                        <img src="img/nextsong.svg" alt="">
+                        <img id="previous" src="img/prevsong.svg" alt="">
+                        <img id="play" src="img/play.svg" alt="">
+                        <img id="next" src="img/nextsong.svg" alt="">
                     </div>
                     <div class="songtime"></div>
                 </div>
