--- a/main.html
+++ b/main.html
@@ -12,6 +12,9 @@
 <body>
     <div class="container flex bg-black">
         <div class="left">
+            <div class="close">
+                <img class="invert" src="assets/images/close.svg" alt="">
+            </div>
             <div class="home bg-grey rounded m-2 p-1">
                 <div class="log"><img src="img/logo.svg" height="60px" alt=""></div>
                 <ul>
@@ -36,6 +39,10 @@
                                 <div>Song Name</div>
                                 <div>Song Artis</div>
                             </div>
+                            <div class="playnow">
+                                <span>Play Now</span>
+                                <img class="invert" src="img/play.svg" alt="">
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -55,23 +62,27 @@
         <div class="right">
             <div class="header bg-grey rounded m-2 p-1">
                 <div class="nav">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
-                        fill="none">
-                        <path d="M15 6C15 6 9.00001 10.4189 9 12C8.99999 13.5812 15 18 15 18" stroke="#ffffff"
-                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                    </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
-                        fill="none">
-                        <path d="M9.00005 6C9.00005 6 15 10.4189 15 12C15 13.5812 9 18 9 18" stroke="#ffffff"
-                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                    </svg>
+                    <div class="hamburgerContainer">
+                        <img class="invert hamburger" src="hamburger.svg" alt="">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"
+                            color="#000000" fill="none">
+                            <path d="M15 6C15 6 9.00001 10.4189 9 12C8.99999 13.5812 15 18 15 18" stroke="#ffffff"
+                                stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"
+                            color="#000000" fill="none">
+                            <path d="M9.00005 6C9.00005 6 15 10.4189 15 12C15 13.5812 9 18 9 18" stroke="#ffffff"
+                                stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </div>
                 </div>
                 <div class="buttons">
                     <button class="signupbtn">Sign Up</button>
                     <button class="loginbtn">Log In</button>
                 </div>
             </div>
-            <div class="spotify-playlist">
+            <div class="spotify-playlist bg-grey rounded m-2 p-1">
                 <h1>Spotify Playlist</h1>
                 <div class="cardContainer">
                     <div class="card">
@@ -127,20 +138,38 @@
                     </div>
                 </div>
                 <div class="playbar">
-                    <div class="songinfo">
+                    <div class="seekbar">
+                        <div class="circle">
 
+                        </div>
                     </div>
-                    <div class="songbuttons">
-                        <img id="previous" src="img/prevsong.svg" alt="">
-                        <img id="play" src="img/play.svg" alt="">
-                        <img id="next" src="img/nextsong.svg" alt="">
+                    <div class="abovebar">
+                        <div class="songinfo">
+
+                        </div>
+                        <div class="songbuttons">
+                            <img id="previous" src="img/prevsong.svg" alt="">
+                            <img id="play" src="img/play.svg" alt="">
+                            <img id="next" src="img/nextsong.svg" alt="">
+                        </div>
+                        <div class="timevol">
+
+
+                            <div class="songtime">
+
+                            </div>
+                            <div class="volume">
+                                <img width="25" src="img/volume.svg" alt="">
+                                <div class="range">
+                                    <input type="range" name="volume" id="">
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="songtime"></div>
                 </div>
             </div>
         </div>
-    </div>
-    <script src="script.js"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
